# simple_explainations

./: .gitignore
.github/workflows/: deploy-ai-app.yml
how-ai-works/: .dockerignore  API.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_api.py
how-ai-works/frontend/: README.md  index.html  package-lock.json  package.json
how-ai-works/frontend/src/: App.vue  config.ts  style.css
how-ai-works/frontend/src/router/: index.ts
how-ai-works/frontend/src/views/: StreamingSimulation.vue  WordPrediction.vue
how-ai-works/scripts/: docker-cleanup.sh  setup-workload-identity.sh
how-ai-works/src/how_ai_works/: __init__.py  api.py  main.py
